implemented the final steps regarding responsiveness

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -110,6 +110,7 @@ body{
     .container {
         flex-direction: column;
         height: 100vh;
+        align-content: center;
     }
 }
 @media (max-width: 590px) {
